<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="Bantuan"
        app:titleTextColor="#ffff"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="1. Menu Utama"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="" />


            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="2. Menu Lokasi"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bantuan_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="3. Menu Spesialis"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bantuan_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="4. Menu Daftar Terapis"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bantuan_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="5. Menu Informasi Terapis"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bantuan_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="6. Tampilan Peta Lokasi Praktik"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img_7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bantuan_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="7. Rute Lokasi Praktik Terapis"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/bantuan_7" />

        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>